fixed overflow issue on iOS devices in listview

--- a/ui/apps/themes/components/listview.less
+++ b/ui/apps/themes/components/listview.less
@@ -98,6 +98,13 @@
     }
 }
 
+.ios {
+    .list-view {
+        &.scrollpane {
+            overflow-x: hidden;
+        }
+    }
+}
 .list-view {
 
     height: 100%;
